Swagger UI working
